Add : stomp chat with room database
채팅 데이터 베이스 연결

--- a/app/src/main/res/layout/item_person_four_chat_list.xml
+++ b/app/src/main/res/layout/item_person_four_chat_list.xml
@@ -28,6 +28,7 @@
                 android:id="@+id/iv_four_chat_room_list_user_img"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
+                android:background="@drawable/bg_layout_round_gray"
                 android:padding="1.2dp"
                 tools:src="@drawable/dummy"
                 app:layout_constraintStart_toStartOf="parent"
@@ -48,6 +49,7 @@
                 android:id="@+id/iv_four_chat_room_list_user_img2"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
+                android:background="@drawable/bg_layout_round_gray"
                 android:padding="1.2dp"
                 tools:src="@drawable/dummy"
                 app:layout_constraintStart_toStartOf="parent"
@@ -68,6 +70,7 @@
                 android:id="@+id/iv_four_chat_room_list_user_img3"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
+                android:background="@drawable/bg_layout_round_gray"
                 android:padding="1.2dp"
                 tools:src="@drawable/dummy"
                 app:layout_constraintStart_toStartOf="parent"
@@ -88,6 +91,7 @@
                 android:id="@+id/iv_four_chat_room_list_user_img4"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
+                android:background="@drawable/bg_layout_round_gray"
                 android:padding="1.2dp"
                 tools:src="@drawable/dummy"
                 app:layout_constraintStart_toStartOf="parent"
