--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -189,11 +189,6 @@
         <action
             android:id="@+id/action_navigation_chat_room_to_updateChatRoomFragment"
             app:destination="@id/navigation_update_chat_room" />
-        <argument
-            android:name="userChatRoom"
-            app:argType="com.sgs.devcamp2.flametalk_android.data.model.chatroom.getchatroomlist.UserChatRoom" />
-        <argument android:name="userChatroomId"
-            app:argType="long" />
     </fragment>
     <fragment
         android:id="@+id/navigation_invite_room"
@@ -207,9 +202,9 @@
             app:popUpToInclusive="true"/>
         <action
             android:id="@+id/action_navigation_invite_room_to_createChatRoomFragment2"
-            app:destination="@id/createChatRoomFragment2"
-            app:enterAnim="@anim/slide_in_up_short"
-            app:exitAnim="@anim/slide_out_up_short" />
+            app:destination="@id/navigation_create_chat_room"
+            app:enterAnim="@anim/slide_in_up_long"
+            app:exitAnim="@anim/slide_out_up_long" />
 
     </fragment>
     <dialog
@@ -222,7 +217,9 @@
             app:destination="@id/navigation_invite_room" />
         <action
             android:id="@+id/action_navigation_chat_Room_Top_Sheet_to_inviteOpenChatRoom"
-            app:destination="@id/navigation_invite_open_chat_room" />
+            app:destination="@id/navigation_invite_open_chat_room"
+            app:enterAnim="@anim/slide_in_up_long"
+            app:exitAnim="@anim/slide_out_up_long" />
     </dialog>
 
     <dialog
@@ -261,7 +258,9 @@
             app:exitAnim="@anim/slide_out_down_long" />
         <action
             android:id="@+id/action_navigation_chatting_viewPager_fragment_to_navigation_chat_room"
-            app:destination="@id/navigation_chat_room" />
+            app:destination="@id/navigation_chat_room"
+            app:enterAnim="@anim/slide_in_up_long"
+            app:exitAnim="@anim/slide_out_up_long" />
         <action
             android:id="@+id/action_navigation_chatting_viewPager_fragment_to_navigation_my_open_profile_detail"
             app:destination="@id/navigation_my_open_profile_detail" />
@@ -303,20 +302,19 @@
         android:label="fragment_update_chat_room"
         tools:layout="@layout/fragment_update_chat_room" >
         <argument
-            android:name="userChatroomId"
-            app:argType="long" />
-        <argument
-            android:name="userChatRoom"
-            app:argType="com.sgs.devcamp2.flametalk_android.data.model.chatroom.getchatroomlist.UserChatRoom" />
+            android:name="chatroomId"
+            app:argType="string" />
     </fragment>
     <fragment
-        android:id="@+id/createChatRoomFragment2"
+        android:id="@+id/navigation_create_chat_room"
         android:name="com.sgs.devcamp2.flametalk_android.ui.createchatroom.CreateChatRoomFragment"
         android:label="fragment_create_chat_room"
         tools:layout="@layout/fragment_create_chat_room" >
         <action
             android:id="@+id/action_createChatRoomFragment2_to_navigation_chat_room"
-            app:destination="@id/navigation_chat_room" />
+            app:destination="@id/navigation_chat_room"
+            app:popUpTo="@id/navigation_create_chat_room"
+            app:popUpToInclusive="true"/>
         <argument
             android:name="users"
             app:argType="string[]" />
