--- a/app/src/main/res/layout/item_person_one.xml
+++ b/app/src/main/res/layout/item_person_one.xml
@@ -16,6 +16,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         tools:src="@drawable/dummy"
+        android:background="@drawable/bg_layout_round_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
