--- a/app/src/main/res/layout/item_person_two.xml
+++ b/app/src/main/res/layout/item_person_two.xml
@@ -18,6 +18,7 @@
         app:layout_constraintWidth_percent="0.6"
         app:layout_constraintHeight_percent="0.6"
         android:layout_height="0dp"
+        android:background="@drawable/bg_layout_round_gray"
         tools:src="@drawable/dummy"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,6 +30,7 @@
         android:layout_height="0dp"
         app:layout_constraintWidth_percent="0.6"
         app:layout_constraintHeight_percent="0.6"
+        android:background="@drawable/bg_layout_round_gray"
         tools:src="@drawable/dummy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
