--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="flame_blue">#0884f6</color>
     <color name="flame_sky_blue">#B0D9FF</color>
     <color name="flame_sky_blue2">#A3D3FF</color>
+    <color name="flame_sky_blue3">#E6F3FF</color>
     <color name="flame_pink">#FF82AD</color>
 
     <color name="gray_transparent">#6F000000</color>
