--- a/app/src/main/res/layout/item_first_invite.xml
+++ b/app/src/main/res/layout/item_first_invite.xml
@@ -24,7 +24,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="누군가에 의해 초대되었습니다."
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textAlignment="center"/>
 
 
