--- a/app/src/main/res/layout/item_vertical_profile.xml
+++ b/app/src/main/res/layout/item_vertical_profile.xml
@@ -5,11 +5,13 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
+
     <ImageView
         android:id="@+id/img_vertical_profile"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginTop="15dp"
+        android:scaleType="centerCrop"
         android:layout_marginHorizontal="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
