--- a/app/src/main/res/layout/item_vertical_profile.xml
+++ b/app/src/main/res/layout/item_vertical_profile.xml
@@ -8,11 +8,11 @@
 
     <ImageView
         android:id="@+id/img_vertical_profile"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="15dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
         android:scaleType="centerCrop"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginHorizontal="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,15 +20,25 @@
 
     <ImageView
         android:id="@+id/img_vertical_profile_none"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_margin="10dp"
         android:background="@drawable/bg_gray_30"
-        android:src="@drawable/ic_plus_white_24"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/img_vertical_profile_icon"
+        android:layout_width="33dp"
+        android:layout_height="33dp"
+        android:src="@drawable/ic_plus_white_24"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="@+id/img_vertical_profile_none"
+        app:layout_constraintStart_toStartOf="@+id/img_vertical_profile_none"
+        app:layout_constraintTop_toTopOf="@+id/img_vertical_profile_none"
+        app:layout_constraintBottom_toBottomOf="@+id/img_vertical_profile_none"/>
 
     <TextView
         android:id="@+id/tv_vertical_profile_nickname"
@@ -42,8 +52,8 @@
 
     <View
         android:id="@+id/v_vertical_profile"
-        android:layout_width="80dp"
-        android:layout_height="100dp"
+        android:layout_width="65dp"
+        android:layout_height="90dp"
         android:layout_margin="5dp"
         android:clickable="true"
         android:background="@drawable/selector_border_blue_10"
