--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -35,6 +35,22 @@
         app:layout_constraintStart_toStartOf="@+id/edt_search"
         app:layout_constraintTop_toTopOf="@+id/edt_search" />
 
+    <TextView
+        android:id="@+id/tv_search_friend_empty"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="20dp"
+        android:background="@drawable/bg_white_10"
+        android:gravity="center"
+        android:paddingVertical="20dp"
+        android:text="검색 결과가 없습니다🥺"
+        android:textAlignment="gravity"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/edt_search" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cst_search_friend"
         android:layout_width="match_parent"
