--- a/app/src/main/res/layout/fragment_add_friend.xml
+++ b/app/src/main/res/layout/fragment_add_friend.xml
@@ -9,7 +9,7 @@
         android:id="@+id/img_signup_back"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:foregroundTint="@color/flame_blue"
         android:src="@drawable/ic_back_arrow_blue_34"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,9 +33,11 @@
         android:id="@+id/v_add_friend_select"
         android:layout_width="match_parent"
         android:layout_height="190dp"
-        android:layout_marginTop="20dp"
-        android:background="@color/flame_sky_blue3"
-        app:layout_constraintStart_toEndOf="@id/img_signup_back"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg_skyblu3_10"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/img_signup_back" />
 
     <TextView
@@ -55,6 +57,7 @@
         android:id="@+id/rv_add_friend_select"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
         android:overScrollMode="never"
@@ -103,13 +106,14 @@
         android:id="@+id/ckt_add_friend_confirm"
         android:layout_width="90dp"
         android:layout_height="40dp"
-        android:layout_margin="20dp"
+        android:layout_marginEnd="15dp"
         android:background="@drawable/bg_button_blue_10"
         android:gravity="center"
         android:text="확인"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="17sp"
+        app:layout_constraintBottom_toTopOf="@+id/v_add_friend_select"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -138,11 +142,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        tools:text="친구 추가가 완료되었습니다"
         android:textColor="@color/flame_blue"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/item_add_friend"
         app:layout_constraintStart_toStartOf="@+id/item_add_friend"
-        app:layout_constraintTop_toBottomOf="@+id/item_add_friend" />
+        app:layout_constraintTop_toBottomOf="@+id/item_add_friend"
+        tools:text="친구 추가가 완료되었습니다" />
 </androidx.constraintlayout.widget.ConstraintLayout>
